--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         function sendTextToAPI() {
             var userInput = document.getElementById("user_input").value;
-            var apiUrl = 'http://127.0.0.1:5000/process_text';  // Replace with the actual API URL
+            var apiUrl = 'http://127.0.0.1:5000/';  // Replace with the actual API URL
 
             // Create a request object
             var request = new Request(apiUrl, {
