--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Send Text to API</title>
+    <title>Machine Learning Food Review</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
-    <h1>Send Text to API</h1>
+    <h1>True Sentiment Food Reviews</h1>
+
+    <h2>Please state the restaurant name and suburb</h2>
+<div class="input-container">
     <form id="textForm">
-        <label for="user_input">Enter Text:</label>
-        <input type="text" id="user_input" name="user_input" placeholder="Type something...">
+        <label for="user_input1">Restaurant Name:</label>
+        <input type="text" id="user_input1" name="user_input1" placeholder="Type name of the restaurant">
+
+        <label for="user_input2">Suburb Name:</label>
+        <input type="text" id="user_input2" name="user_input2" placeholder="Type name of the suburb">
+
         <button type="button" onclick="sendTextToAPI()">Submit</button>
     </form>
-    <p>API Response: <span id="api_response"></span></p>
 
-    <script>
-        function sendTextToAPI() {
-            var userInput = document.getElementById("user_input").value;
-            var apiUrl = 'http://127.0.0.1:5000/';  // Replace with the actual API URL
+    <div id="outputMappingTable"></div>
+</div>
 
-            // Create a request object
-            var request = new Request(apiUrl, {
-                method: 'POST', // Use 'POST' for sending data to the API
-                body: JSON.stringify({ text: userInput }), // Convert the input to JSON
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            });
+    <p><span id="api_response"></span></p>
+    <div id="Data-heading">
+        <p>Data outcome</p>
+    </div>
 
-            // Send the request
-            fetch(request)
-                .then(function(response) {
-                    return response.json();
-                })
-                .then(function(data) {
-                    document.getElementById("api_response").textContent = data.response;
-                })
-                .catch(function(error) {
-                    console.error('Error:', error);
-                });
-        }
-    </script>
+    <div id="dataframe_list"></div>
+        <div id="barChartContainer" style="height: 400px;"></div>
+        <div id="gaugeChartContainer" style="height: 400px;"></div>
+        <div id="reviewsContainer">
+            <h3>Reviews</h3>
+            <ul id="reviewsList"></ul>
+        </div>
+        
+    <script src = "API.js"></script>
+    <script src = "merged_java.js"></script>
+
 </body>
 </html>
